--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.20.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body": "^5.1.0",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.4.0",
