--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,12 +15,16 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.3",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-image-crop": "^11.0.7",
     "react-router-dom": "^7.1.5",
     "react-simple-typewriter": "^5.0.1",
+    "react-zoom-pan-pinch": "^3.7.0",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "typewriter-effect": "^2.21.0"
   },
