--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,10 +19,12 @@
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-image-crop": "^11.0.7",
     "react-router-dom": "^7.1.5",
     "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^11.0.3",
     "react-zoom-pan-pinch": "^3.7.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
